Removed some personal information

--- a/ContactMe.html
+++ b/ContactMe.html
@@ -8,8 +8,8 @@
     <h1>Contact me Below</h1>
     <hr>
     <p>My Discord: Hudson#4246</p></p>
-    <p>My Email: hudsonbrrodrigues@gmail.com</p>
-    <p>Number: 21968671311</p>
+    <p>My Email:</p>
+    <p>Number:</p>
       <hr>
     <form class="" action="gmail:@hudsonbrrodrigues.com" method="post">
       <label>Your Name:</label>
